--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.10",
     "vue2-leaflet": "^2.4.1",
     "vuetify": "^2.1.15"
